--- a/client/index.html
+++ b/client/index.html
@@ -22,8 +22,12 @@
     <script src='/home/home.controller.js'></script>
     <script src='/home/home.routes.js'></script>
 
+    <!-- directives -->
+    <script src='/shared/directives/navbar/navbar.directive.js'></script>
+
   </head>
   <body>
+    <navbar></navbar>
     <div class='container' ui-view></div>
   </body>
 </html>
