--- a/client/index.html
+++ b/client/index.html
@@ -19,8 +19,7 @@
     <script src='/app.js'></script>
 
     <!-- home -->
-    <script src='/home/home.controller.js'></script>
-    <script src='/home/home.routes.js'></script>
+    <script src='/components/home/home.routes.js'></script>
 
     <!-- directives -->
     <script src='/shared/directives/navbar/navbar.directive.js'></script>
