--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,10 @@
     <!-- app -->
     <script src='/app.js'></script>
 
-    <!-- home -->
+    <!-- components -->
     <script src='/components/home/home.routes.js'></script>
+    <script src='/components/signup/signup.controller.js'></script>
+    <script src='/components/signup/signup.routes.js'></script>
 
     <!-- directives -->
     <script src='/shared/directives/navbar/navbar.directive.js'></script>
