--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,17 @@
 
     <!-- directives -->
     <script src='/shared/directives/navbar/navbar.directive.js'></script>
+    <script src='/shared/directives/confirmPassword.js'></script>
 
+    <!-- providers -->
+    <script src='/shared/providers/auth.factory.js'></script>
+    <script src='/shared/providers/user.service.js'></script>
+
+    <style>
+      a {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <navbar></navbar>
