--- a/client/shared/directives/navbar/navbar.directive.html
+++ b/client/shared/directives/navbar/navbar.directive.html
@@ -6,17 +6,17 @@
     </ul>
 
     <!-- right side: not logged in -->
-    <ul class='nav navbar-nav navbar-right'>
+    <ul class='nav navbar-nav navbar-right' ng-show='!vm.currentUser._id'>
       <li><a ui-sref='signup'>Sign Up</a></li>
       <li><a ui-sref='login'>Log In</a></li>
     </ul>
 
     <!-- right side: logged in -->
-    <!-- <ul class='nav navbar-nav navbar-right' ng-show='vm.currentUser._id'>
+    <ul class='nav navbar-nav navbar-right' ng-show='vm.currentUser._id'>
       <li ng-if="vm.currentUser.role === 'admin'"><a ui-sref='admin'>Admin</a></li>
       <li><a ui-sref='profile({ id: vm.currentUser._id })'>{{ vm.currentUser.username }}</a></li>
       <li><a ui-sref='settings({ id: vm.currentUser._id })'><span class='glyphicon glyphicon-cog'></span></a></li>
       <li><a ng-click='vm.logout()'>Log Out</a></li>
-    </ul> -->
+    </ul>
   </div>
 </nav>
