--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,8 @@
     <script src='/components/users/login/login.routes.js'></script>
     <script src='/components/users/profile/profile.controller.js'></script>
     <script src='/components/users/profile/profile.routes.js'></script>
+    <script src='/components/users/settings/settings.controller.js'></script>
+    <script src='/components/users/settings/settings.routes.js'></script>
 
     <!-- directives -->
     <script src='/shared/directives/navbar/navbar.directive.js'></script>
