--- a/client/shared/directives/navbar/navbar.directive.html
+++ b/client/shared/directives/navbar/navbar.directive.html
@@ -3,6 +3,7 @@
     <!-- left side -->
     <ul class='nav navbar-nav'>
       <li><a ui-sref='home'>Home</a></li>
+      <li><a>{{ vm.currentUser }}</a></li>
     </ul>
 
     <!-- right side: not logged in -->
