--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
     <script src='/components/users/profile/profile.routes.js'></script>
     <script src='/components/users/settings/settings.controller.js'></script>
     <script src='/components/users/settings/settings.routes.js'></script>
+    <script src='/components/users/admin/admin.controller.js'></script>
+    <script src='/components/users/admin/admin.routes.js'></script>
 
     <!-- directives -->
     <script src='/shared/directives/navbar/navbar.directive.js'></script>
