Fixes for tests that involve :id

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
 
     <!-- app -->
     <script src='/app.js'></script>
+    <script src='/authorization.js'></script>
 
     <!-- components -->
     <script src='/components/home/home.routes.js'></script>
