--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,8 @@
     <script src='/components/users/settings/settings.routes.js'></script>
     <script src='/components/users/admin/admin.controller.js'></script>
     <script src='/components/users/admin/admin.routes.js'></script>
+    <script src='/components/users/changePassword/changePassword.controller.js'></script>
+    <script src='/components/users/changePassword/changePassword.routes.js'></script>
 
     <!-- directives -->
     <script src='/shared/directives/confirmPassword.js'></script>
