--- a/client/index.html
+++ b/client/index.html
@@ -8,12 +8,12 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
     <!-- libraries -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-cookies.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.1/ui-bootstrap.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.1/ui-bootstrap-tpls.js'></script>
+    <script src='/lib/angular.js'></script>
+    <script src='/lib/angular-cookies.js'></script>
+    <script src='/lib/angular-messages.js'></script>
+    <script src='/lib/angular-ui-router.js'></script>
+    <script src='/lib/ui-bootstrap.js'></script>
+    <script src='/lib/ui-bootstrap-tpls.js'></script>
 
     <!-- app -->
     <script src='/app.js'></script>
