Added src and dest files

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,12 +8,12 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
     <!-- libraries -->
-    <script src='/lib/angular.js'></script>
-    <script src='/lib/angular-cookies.js'></script>
-    <script src='/lib/angular-messages.js'></script>
-    <script src='/lib/angular-ui-router.js'></script>
-    <script src='/lib/ui-bootstrap.js'></script>
-    <script src='/lib/ui-bootstrap-tpls.js'></script>
+    <script src='/angular.js'></script>
+    <script src='/angular-cookies.js'></script>
+    <script src='/angular-messages.js'></script>
+    <script src='/angular-ui-router.js'></script>
+    <script src='/ui-bootstrap.js'></script>
+    <script src='/ui-bootstrap-tpls.js'></script>
 
     <!-- app -->
     <script src='/app.js'></script>
