--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,9 @@
     <title>MEAN Starter</title>
     <base href='/'>
 
+    <!-- css -->
+    <link rel='stylesheet' href='/assets/css/app.css'>
+
     <!-- bootstrap -->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 
