Added folders for providers

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -42,8 +42,8 @@
     <script src='/shared/directives/confirmPassword.js'></script>
 
     <!-- providers -->
-    <script src='/shared/providers/auth.factory.js'></script>
-    <script src='/shared/providers/user.service.js'></script>
+    <script src='/shared/providers/Auth/auth.factory.js'></script>
+    <script src='/shared/providers/User/user.service.js'></script>
   </head>
   <body>
     <navbar></navbar>
