Using Session service instead of currentUser

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -44,6 +44,7 @@
     <!-- providers -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
     <script src='/shared/providers/User/user.service.js'></script>
+    <script src='/shared/providers/Session/session.service.js'></script>
   </head>
   <body>
     <navbar></navbar>
