Created a folder for confirmPassword

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -39,7 +39,7 @@
     <script src='/components/users/changePassword/changePassword.routes.js'></script>
 
     <!-- directives -->
-    <script src='/shared/directives/confirmPassword.js'></script>
+    <script src='/shared/directives/confirmPassword/confirmPassword.directive.js'></script>
 
     <!-- providers -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
