--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,6 +9,7 @@
 
     <!-- bootstrap -->
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
     <!-- libraries -->
     <script src='/angular.js'></script>
