--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app='mean-starter'>
+<html ng-app='tango'>
   <head>
     <title>MEAN Starter</title>
     <base href='/'>
