Karma and mocha tests passing

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app='tango'>
   <head>
-    <title>MEAN Starter</title>
+    <title>Tango</title>
     <base href='/'>
 
     <!-- css -->
@@ -22,25 +22,18 @@
     <!-- app -->
     <script src='/app.js'></script>
     <script src='/authorization.js'></script>
+    <script src='/run/run.js'></script>
 
     <!-- components -->
+    <script src='/components/home/home.controller.js'></script>
     <script src='/components/home/home.routes.js'></script>
     <script src='/components/navbar/navbar.directive.js'></script>
-    <script src='/components/users/signup/signup.controller.js'></script>
-    <script src='/components/users/signup/signup.routes.js'></script>
-    <script src='/components/users/login/login.controller.js'></script>
-    <script src='/components/users/login/login.routes.js'></script>
     <script src='/components/users/profile/profile.controller.js'></script>
     <script src='/components/users/profile/profile.routes.js'></script>
     <script src='/components/users/settings/settings.controller.js'></script>
     <script src='/components/users/settings/settings.routes.js'></script>
     <script src='/components/users/admin/admin.controller.js'></script>
     <script src='/components/users/admin/admin.routes.js'></script>
-    <script src='/components/users/changePassword/changePassword.controller.js'></script>
-    <script src='/components/users/changePassword/changePassword.routes.js'></script>
-
-    <!-- directives -->
-    <script src='/shared/directives/confirmPassword/confirmPassword.directive.js'></script>
 
     <!-- providers -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
