--- a/client/src/index.html
+++ b/client/src/index.html
@@ -34,6 +34,8 @@
     <script src='/components/users/settings/settings.routes.js'></script>
     <script src='/components/users/admin/admin.controller.js'></script>
     <script src='/components/users/admin/admin.routes.js'></script>
+    <script src='/components/tangos/new/new.controller.js'></script>
+    <script src='/components/tangos/new/new.routes.js'></script>
 
     <!-- providers -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
