Recursion displays tangos. Need to add ability to save, add, edit etc.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -34,12 +34,14 @@
     <script src='/components/users/settings/settings.routes.js'></script>
     <script src='/components/users/admin/admin.controller.js'></script>
     <script src='/components/users/admin/admin.routes.js'></script>
-    <script src='/components/tangos/new/new.controller.js'></script>
-    <script src='/components/tangos/new/new.routes.js'></script>
+    <script src='/components/tangos/new/tango.new.controller.js'></script>
+    <script src='/components/tangos/new/tango.new.routes.js'></script>
+    <script src='/components/tangos/directive/tango.directive.js'></script>
 
-    <!-- providers -->
+    <!-- shared -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
     <script src='/shared/providers/User/user.service.js'></script>
+    <script src='/shared/providers/RecursionHelper/RecursionHelper.factory.js'></script>
   </head>
   <body>
     <navbar></navbar>
