Some work on autosize and styling

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -18,6 +18,7 @@
     <script src='/angular-ui-router.js'></script>
     <script src='/ui-bootstrap.js'></script>
     <script src='/ui-bootstrap-tpls.js'></script>
+    <script src='/autosize.js'></script>
 
     <!-- app -->
     <script src='/app.js'></script>
