Changed name of directory from components to states

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -25,19 +25,19 @@
     <script src='/authorization.js'></script>
     <script src='/run/run.js'></script>
 
-    <!-- components -->
-    <script src='/components/home/home.controller.js'></script>
-    <script src='/components/home/home.routes.js'></script>
-    <script src='/components/navbar/navbar.directive.js'></script>
-    <script src='/components/users/profile/profile.controller.js'></script>
-    <script src='/components/users/profile/profile.routes.js'></script>
-    <script src='/components/users/settings/settings.controller.js'></script>
-    <script src='/components/users/settings/settings.routes.js'></script>
-    <script src='/components/users/admin/admin.controller.js'></script>
-    <script src='/components/users/admin/admin.routes.js'></script>
-    <script src='/components/tangos/new/tango.new.controller.js'></script>
-    <script src='/components/tangos/new/tango.new.routes.js'></script>
-    <script src='/components/tangos/directive/tango.directive.js'></script>
+    <!-- states -->
+    <script src='/states/home/home.controller.js'></script>
+    <script src='/states/home/home.routes.js'></script>
+    <script src='/states/navbar/navbar.directive.js'></script>
+    <script src='/states/users/profile/profile.controller.js'></script>
+    <script src='/states/users/profile/profile.routes.js'></script>
+    <script src='/states/users/settings/settings.controller.js'></script>
+    <script src='/states/users/settings/settings.routes.js'></script>
+    <script src='/states/users/admin/admin.controller.js'></script>
+    <script src='/states/users/admin/admin.routes.js'></script>
+    <script src='/states/tangos/new/tango.new.controller.js'></script>
+    <script src='/states/tangos/new/tango.new.routes.js'></script>
+    <script src='/states/tangos/directive/tango.directive.js'></script>
 
     <!-- shared -->
     <script src='/shared/providers/Auth/auth.factory.js'></script>
