Basic styling and positioning done

--- a/client/src/states/tangos/directive/tango.directive.html
+++ b/client/src/states/tangos/directive/tango.directive.html
@@ -5,7 +5,7 @@
     <img
       ng-show='tango.children.length > 0'
       src='/assets/images/show-arrow.png'>
-    <span class='author'>A</span>
+    <span class='author'>WWW</span> <!-- 5 char limit -->
   </span>
   <textarea
     ng-focus='focus = true;'
