--- a/client/src/states/tangos/new/tango.new.html
+++ b/client/src/states/tangos/new/tango.new.html
@@ -2,8 +2,8 @@
   <h1>Create a Tango</h1>
 </div>
 
-<tango
-  ng-repeat='tango in vm.tangos'
-  tango='tango'
+<statement
+  ng-repeat='statement in vm.statements'
+  statement='statement'
   level='0'>
-</tango>
+</statement>
