Focus is being transferred to newly created statements

--- a/client/src/states/tangos/directive/statement.directive.html
+++ b/client/src/states/tangos/directive/statement.directive.html
@@ -17,11 +17,11 @@
     <span> | </span>
     <span
       class='glyphicon glyphicon-arrow-right'
-      ng-mousedown='vm.createChild()'>
+      ng-mousedown='vm.createChild($event)'>
     </span>
     <span
       class='glyphicon glyphicon-arrow-down'
-      ng-mousedown='vm.insertNextStatement()'>
+      ng-mousedown='vm.insertNextStatement($event)'>
     </span>
   </p>
 </div>
