--- a/client/src/states/tangos/directive/statement.directive.html
+++ b/client/src/states/tangos/directive/statement.directive.html
@@ -8,23 +8,26 @@
     <span class='author'>WWW</span> <!-- 5 char limit -->
   </span>
   <textarea
+    ng-model='vm.statement.text'
     ng-focus='vm.focus = true;'
     ng-blur='vm.focus = false;'
     rows='1'>{{ vm.statement.text }}</textarea>
   <p class='menu clear' ng-show='true'>
+    <span class='glyphicon glyphicon-remove'></span>
+    <span> &bull; </span>
     <span
       class='glyphicon glyphicon-indent-left'
       tooltip-html='vm.indentRightHtml'
-      tooltip-placement='left'
+      tooltip-placement='bottom'
       ng-mousedown='vm.indentRight()'>
     </span>
     <span
       class='glyphicon glyphicon-indent-right'
       tooltip-html='vm.indentLeftHtml'
-      tooltip-placement='left'
+      tooltip-placement='bottom'
       ng-mousedown='vm.indentLeft()'>
     </span>
-    <span> | </span>
+    <span> &bull; </span>
     <span
       class='glyphicon glyphicon-arrow-right'
       tooltip-html='vm.insertChildHtml'
@@ -43,8 +46,7 @@
 </div>
 
 <statement
-  ng-repeat='substatement in vm.statement.children'
+  ng-repeat='substatement in vm.statement.children track by $index'
   statement='substatement'
-  parent='vm.statement.children'
   level='{{ +vm.level + 1 }}'>
 </statement>
