--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -9,11 +9,16 @@
   </span>
   <textarea
     ng-model='vm.statement.text'
-    ng-focus='vm.focus = true;'
-    ng-blur='vm.focus = false;'
+    ng-focus='vm.statement.focus = true;'
+    ng-blur='vm.statement.focus = false;'
     rows='1'>{{ vm.statement.text }}</textarea>
-  <p class='menu clear' ng-show='true'>
-    <span class='glyphicon glyphicon-remove'></span>
+  <p class='menu clear' ng-show='vm.statement.focus'>
+    <span
+      class='glyphicon glyphicon-remove'
+      tooltip-html='vm.deleteStatementHtml'
+      tooltip-placement='left'
+      ng-mousedown='vm.deleteStatement()'>
+    </span>
     <span> &bull; </span>
     <span
       class='glyphicon glyphicon-indent-left'
