--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -11,35 +11,37 @@
     ng-model='vm.statement.text'
     ng-focus='vm.statement.focus = true;'
     ng-blur='vm.statement.focus = false;'
-    rows='1'>{{ vm.statement.text }}</textarea>
-  <p class='menu clear' ng-show='vm.statement.focus'>
-    <span
-      class='glyphicon glyphicon-remove'
-      tooltip-html='vm.deleteStatementHtml'
-      tooltip-placement='left'
-      ng-mousedown='vm.deleteStatement()'>
-    </span>
-    <span> &bull; </span>
-    <span
-      class='glyphicon glyphicon-indent-left'
-      tooltip-html='vm.indentRightHtml'
-      tooltip-placement='bottom'
-      ng-mousedown='vm.indentRight()'>
-    </span>
-    <span
-      class='glyphicon glyphicon-indent-right'
-      tooltip-html='vm.indentLeftHtml'
-      tooltip-placement='bottom'
-      ng-mousedown='vm.indentLeft()'>
-    </span>
-    <span> &bull; </span>
-    <span
-      class='glyphicon glyphicon-arrow-down'
-      tooltip-html='vm.insertNextStatementHtml'
-      tooltip-placement='bottom'
-      ng-mousedown='vm.insertNextStatement($event)'>
-    </span>
-  </p>
+    rows='1'></textarea>
+  <div class='menu-container'>
+    <p class='menu clear' ng-show='vm.statement.focus'>
+      <span
+        class='glyphicon glyphicon-remove'
+        tooltip-html='vm.deleteStatementHtml'
+        tooltip-placement='left'
+        ng-mousedown='vm.deleteStatement()'>
+      </span>
+      <span> &bull; </span>
+      <span
+        class='glyphicon glyphicon-indent-left'
+        tooltip-html='vm.indentRightHtml'
+        tooltip-placement='bottom'
+        ng-mousedown='vm.indentRight()'>
+      </span>
+      <span
+        class='glyphicon glyphicon-indent-right'
+        tooltip-html='vm.indentLeftHtml'
+        tooltip-placement='bottom'
+        ng-mousedown='vm.indentLeft()'>
+      </span>
+      <span> &bull; </span>
+      <span
+        class='glyphicon glyphicon-arrow-down'
+        tooltip-html='vm.insertNextStatementHtml'
+        tooltip-placement='bottom'
+        ng-mousedown='vm.insertNextStatement($event)'>
+      </span>
+    </p>
+  </div>
 </div>
 
 </div>
