Deleting transfers focus + can navigate up/down

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,6 +12,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
 
     <!-- libraries -->
+    <script src='/jquery.js'></script>
     <script src='/angular.js'></script>
     <script src='/angular-cookies.js'></script>
     <script src='/angular-messages.js'></script>
