Changed keybindings (I shouldn't be overriding the default behavior of cmd)

--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -46,6 +46,19 @@
       </span>
       <span> &bull; </span>
       <span
+        class='glyphicon glyphicon-chevron-up'
+        tooltip-html='vm.upOneHtml'
+        tooltip-placement='bottom'
+        ng-mousedown='vm.upOne()'>
+      </span>
+      <span
+        class='glyphicon glyphicon-chevron-down'
+        tooltip-html='vm.downOneHtml'
+        tooltip-placement='bottom'
+        ng-mousedown='vm.downOne()'>
+      </span>
+      <span> &bull; </span>
+      <span
         class='glyphicon glyphicon-plus'
         tooltip-html='vm.insertNextStatementHtml'
         tooltip-placement='bottom'
