Can tab inside of the textarea

--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -22,7 +22,8 @@
     ng-model='vm.statement.text'
     ng-focus='vm.statement.focus = true;'
     ng-blur='vm.statement.focus = false;'
-    rows='1'></textarea>
+    rows='1'
+    tabby></textarea>
   <div class='menu-container'>
     <p class='menu clear' ng-show='vm.statement.focus'>
       <span
