--- a/client/src/index.html
+++ b/client/src/index.html
@@ -20,6 +20,7 @@
     <script src='/ui-bootstrap.js'></script>
     <script src='/ui-bootstrap-tpls.js'></script>
     <script src='/autosize.js'></script>
+    <script src='/tabby.js'></script>
 
     <!-- app -->
     <script src='/app.js'></script>
