Remove up/down from tango icons

--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -49,14 +49,12 @@
       <span
         class='glyphicon glyphicon-chevron-up'
         tooltip-html='vm.upOneHtml'
-        tooltip-placement='bottom'
-        ng-mousedown='vm.upOne()'>
+        tooltip-placement='bottom'>
       </span>
       <span
         class='glyphicon glyphicon-chevron-down'
         tooltip-html='vm.downOneHtml'
-        tooltip-placement='bottom'
-        ng-mousedown='vm.downOne()'>
+        tooltip-placement='bottom'>
       </span>
       <span> &bull; </span>
       <span
