--- a/client/src/index.html
+++ b/client/src/index.html
@@ -21,6 +21,7 @@
     <script src='/ui-bootstrap-tpls.js'></script>
     <script src='/autosize.js'></script>
     <script src='/tabby.js'></script>
+    <script src='/lodash.js'></script>
 
     <!-- app -->
     <script src='/app.js'></script>
@@ -37,8 +38,8 @@
     <script src='/states/users/settings/settings.routes.js'></script>
     <script src='/states/users/admin/admin.controller.js'></script>
     <script src='/states/users/admin/admin.routes.js'></script>
-    <script src='/states/tangos/new/tango.new.controller.js'></script>
-    <script src='/states/tangos/new/tango.new.routes.js'></script>
+    <script src='/states/tangos/tango.controller.js'></script>
+    <script src='/states/tangos/tango.routes.js'></script>
     <script src='/states/tangos/statementDirective/statement.directive.js'></script>
 
     <!-- shared -->
@@ -46,6 +47,7 @@
     <script src='/shared/providers/User/user.service.js'></script>
     <script src='/shared/providers/RecursionHelper/recursionHelper.factory.js'></script>
     <script src='/shared/providers/StatementConstructor/statementConstructor.factory.js'></script>
+    <script src='/shared/providers/Tango/tango.service.js'></script>
   </head>
   <body>
     <navbar></navbar>
