--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -5,7 +5,7 @@
     <strong>Sims</strong>
     <span class='glyphicon glyphicon-question-sign'></span>
   </p>
-  <div class='sim' ng-repeat='sim in vm.tango.sims'>
+  <div class='sim' ng-repeat='sim in vm.tango.sims track by $index'>
     <label>Name: </label>
     <input
       type='text'
@@ -42,10 +42,18 @@
 </div>
 
 <statement
-  ng-repeat='statement in vm.tango.statements'
+  ng-repeat='statement in vm.tango.statements track by $index'
   statement='statement'
   sims='vm.tango.sims'
   level='0'>
 </statement>
+
+<hr />
+
+<button
+  ng-click='vm.createTango()'
+  class='btn btn-primary'>
+  Create Tango
+</button>
 
 </div>
