--- a/client/src/states/users/profile/profile.html
+++ b/client/src/states/users/profile/profile.html
@@ -1,3 +1,9 @@
 <div class='page-header'>
   <h1>Profile</h1>
 </div>
+
+<ul>
+  <li ng-repeat='tango in vm.user.tangos'>
+    <a ui-sref='tango({ id: tango._id })'>test</a>
+  </li>
+</ul>
