--- a/client/src/states/navbar/navbar.directive.html
+++ b/client/src/states/navbar/navbar.directive.html
@@ -5,7 +5,7 @@
     <!-- left side -->
     <ul class='nav navbar-nav'>
       <li><a ui-sref='home'>Home</a></li>
-      <li><a ui-sref='tango'>Create Tango</a></li>
+      <li><a ui-sref='tango::new'>Create Tango</a></li>
       <li ng-if='vm.currentUser'><a ui-sref='profile({ id: vm.currentUser._id })'>My Tangos</a></li>
     </ul>
 
@@ -14,7 +14,6 @@
       <!-- admin -->
       <li ng-if="vm.currentUser.local.role === 'admin'"><a ui-sref='admin'>Admin</a></li>
       <!-- all -->
-      <li><a ui-sref='profile({ id: vm.currentUser._id })'><span class='glyphicon glyphicon-user'></span></a></li>
       <li><a ui-sref='settings({ id: vm.currentUser._id })'><span class='glyphicon glyphicon-cog'></span></a></li>
       <li><a ng-click='vm.logout()'>Log Out</a></li>
     </ul>
