--- a/client/src/states/tangos/statementDirective/statement.directive.html
+++ b/client/src/states/tangos/statementDirective/statement.directive.html
@@ -32,7 +32,7 @@
         tooltip-placement='left'
         ng-mousedown='vm.deleteStatement($event)'>
       </span>
-      <span> &bull; </span>
+      <span class='bullet'> &bull; </span>
       <span
         class='glyphicon glyphicon-indent-left'
         tooltip-html='vm.indentRightHtml'
@@ -45,7 +45,7 @@
         tooltip-placement='bottom'
         ng-mousedown='vm.indentLeft()'>
       </span>
-      <span> &bull; </span>
+      <span class='bullet'> &bull; </span>
       <span
         class='glyphicon glyphicon-chevron-up'
         tooltip-html='vm.upOneHtml'
@@ -56,7 +56,7 @@
         tooltip-html='vm.downOneHtml'
         tooltip-placement='bottom'>
       </span>
-      <span> &bull; </span>
+      <span class='bullet'> &bull; </span>
       <span
         class='glyphicon glyphicon-plus'
         tooltip-html='vm.insertNextStatementHtml'
