Tango title starts off with focus when creating

--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -1,4 +1,4 @@
-<div id='new-tango-template'>
+<div class='new-tango-template'>
 
 <alert ng-show='vm.alert' type='danger' close='vm.closeAlert()'>
   {{ vm.alert }}
