Success flashes fade out after 2 seconds

--- a/client/src/states/home/home.html
+++ b/client/src/states/home/home.html
@@ -1,4 +1,4 @@
-<alert type='success' close='vm.closeLogoutFlash()' ng-show='vm.logoutFlash'>
+<alert type='success' close='vm.closeLogoutFlash()' ng-if='vm.logoutFlash' dismiss-on-timeout='2000'>
   Successfully logged out.
 </alert>
 
