--- a/client/src/index.html
+++ b/client/src/index.html
@@ -48,8 +48,10 @@
     <script src='/shared/providers/RecursionHelper/RecursionHelper.factory.js'></script>
     <script src='/shared/providers/StatementConstructor/statementConstructor.factory.js'></script>
     <script src='/shared/providers/Tango/tango.service.js'></script>
+    <script src='/shared/directives/azLoading/azLoading.directive.js'></script>
   </head>
   <body>
+    <div class='az-lightbox'></div>
     <navbar></navbar>
     <div class='container' ui-view></div>
   </body>
