--- a/client/src/states/tangos/tango.html
+++ b/client/src/states/tangos/tango.html
@@ -58,7 +58,8 @@
 <hr />
 
 <button
-  ng-click='vm.submit()'
+  az-loading='Submitting...'
+  on-click='vm.submit()'
   class='btn btn-primary'>
   {{ vm.submitText }}
 </button>
