--- a/client/src/states/users/myTangos/myTangos.html
+++ b/client/src/states/users/myTangos/myTangos.html
@@ -1,3 +1,5 @@
+<div class='my-tangos-template'>
+
 <alert ng-if='vm.alertSuccess' type='success' close='vm.closeAlertSuccess()' dismiss-on-timeout='2000'>
   Successfully removed Tango.
 </alert>
@@ -6,12 +8,12 @@
 </alert>
 
 <div class='page-header'>
-  <h1>Profile</h1>
+  <h1>My Tangos</h1>
 </div>
 
 <ul>
   <li ng-repeat='tango in vm.user.tangos'>
-    <a ui-sref='tango({ id: tango._id })'>{{ tango.title }}</a> |
+    <a ui-sref='tango({ id: tango._id })'>{{ tango.title }}</a>
     <span
       ng-click='vm.remove(tango)'
       class='glyphicon glyphicon-trash'>
