Added blog post

--- a/client/src/states/home/home.html
+++ b/client/src/states/home/home.html
@@ -22,13 +22,13 @@
     <h3>Benefit #1 - Visualize the structure. Offload your working memory.</h3>
     <ul>
       <li>
-        Representation matters.
+        <a href='https://medium.com/@adamzerner/representation-matters-f46d7acf8786'>Representation matters.</a>
         <blockquote>
           Solving a problem simply means representing it so as to make the solution transparent.<br />
           - Herb Simon
         </blockquote>
       </li>
-      <li>It's easier when the structure of your thoughts are right in front of you.</li>
+      <li>It's easier when the structure of your thoughts is right in front of you.</li>
       <li>Tango presents this structure to you.</li>
     </ul>
 
